Security, performance and reliability enhancements
* Manual validate blocks will now validate and if possible repair storage of blocks in backup destinations.
* Set owner only permission of configuration files on Windows and not just POSIX systems.
* Report restore against local files as errors if running with --force option.
* Fixed incorrect warnings about failing to create directory.
* Added debug messsages for delete and exists checks in all IO providers.
* Added option to specify the number of retries for network calls.